# intro_geospatial_data

./: README.md  pyproject.toml
data/: nairobi_street_network.shp  nairobi_street_network.shx  nairobi_street_network_reprojected_32637.shp  nairobi_street_network_reprojected_32637.shx
data/output/: cities.dbf  cities.shp  cities.shx
notebooks/: coordinate_reference_system.ipynb  create_shapefile.ipynb  data_types.ipynb  load_visualize.ipynb  nairobi_road_exercise.ipynb  using_overpass_osm.ipynb
