[project]
name = "intro-geospatial-data"
version = "0.1.0"
description = ""
authors = [
    {name = "David Quispe"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "shapely (>=2.1.0,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "osmnx (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

